# Smart_Lock

./: README.md
Smart_Lock/: sdkconfig  sdkconfig.old
Smart_Lock/main/: CMakeLists.txt
Smart_Lock/main/App/: App_Communication.h  App_Finger.c  App_Key.c
Smart_Lock/main/Com/: Com_Define.h
Smart_Lock/main/Dri/: Dri_BLE.c  Dri_BLE.h  Dri_NVS.c  Dri_WIFI.c  Dri_WIFI.h
Smart_Lock/main/Int/: Int_BDR6120.c  Int_BDR6120.h  Int_FPM383.h  Int_SC12B.c  Int_SC12B.h  Int_WS2812.h  Int_WTN6170.c  Int_WTN6170.h
SourceCode/Smart_Lock/: CMakeLists.txt
SourceCode/Smart_Lock/main/: Kconfig.projbuild  main.c
SourceCode/Smart_Lock/main/App/: App_Communication.c  App_Finger.h  App_Key.c  App_Key.h
SourceCode/Smart_Lock/main/Com/: Com_Debug.h
SourceCode/Smart_Lock/main/Dri/: Dri_NVS.h
SourceCode/Smart_Lock/main/Int/: Int_FPM383.c  Int_WS2812.c
资料/MD资料/: 01.硬件选型.md  02.ESP32开发环境搭建.md  03.ESP32-C3介绍.md  04.创建工程.md  05.硬件驱动.md  06.蓝牙开锁.md  07.OTA功能.md
资料/官方资料/: 3.智能门锁.pptx
