idf_component_register(
    SRCS
        "main.c"
        "Com/Com_Debug.c"
        "Int/Int_BDR6120.c"
        "Int/Int_WTN6170.c"
        "Int/Int_SC12B.c"
        "Int/Int_WS2812.c"
        "Int/Int_FPM383.c"
        "Dri/Dri_NVS.c"
        "Dri/Dri_BLE.c"
        "Dri/Dri_WIFI.c"
        "App/App_Key.c"
        "App/App_Finger.c"
        "App/App_Communication.c"

    INCLUDE_DIRS
        "."
        "Com"
        "Int"
        "Dri"
        "App"
)
